chore: 增加 lerna

--- a/package.json
+++ b/package.json
@@ -3,8 +3,5 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "twinh",
-  "license": "MIT",
-  "dependencies": {
-    "base": "^1.0.0"
-  }
+  "license": "MIT"
 }
