chore: 增加 repository ？

--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "twinh",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/twinh/github-actions-test.git"
+  }
 }
