chore: 更新 package

--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
-{"name":"@github-test/base","version":"1.0.0","main":"index.js","private":false,"author":"twinh","license":"MIT","repository":{"type":"git","url":"git+https://github.com/twinh/github-actions-test.git"},"dependencies":{},"devDependencies":{},"peerDependencies":{},"optionalDependencies":{}}
+{
+  "name": "@github-test/base",
+  "version": "1.0.1",
+  "main": "index.js",
+  "private": false,
+  "author": "twinh",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/twinh/github-actions-test.git"
+  }
+}
