--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/twinh/github-actions-test.git"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "dependencies": {
+    "@miaoxing/dev": "*"
   }
 }
