chore: 尝试指定 develop 分支为 1.x

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
       "Base\\": "src/"
     }
   },
-  "require": {}
+  "require": {},
+  "extra": {
+    "branch-alias": {
+      "dev-develop": "1.x-dev"
+    }
+  }
 }
