--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
-name: Node CI
+name: Build
 
 on: [push]
+
+env:
+  extensions: mbstring, mysql
+  key: cache-v1 # can be any string, change to clear the extension cache.
 
 jobs:
   phpunit:
@@ -9,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.2', '7.3', '7.4' ]
+        php-versions: [ '7.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
