--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-develop": "1.x-dev"
+      "dev-develop": "1.x-dev",
+      "dev-dev/page": "1.x-dev"
     }
   }
 }
